src/test/ui/impl-trait/universal-two-impl-traits.stderr
error[E0308]: mismatched types
  --> $DIR/universal-two-impl-traits.rs:5:9
   |
LL |     a = y;
   |         ^ expected type parameter, found a different type parameter
   |
   = note: expected type `impl Debug` (type parameter)
              found type `impl Debug` (type parameter)
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
